--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -1,7 +1,10 @@
 html {
   overflow-y:scroll;
 }
-
+.container{
+  margin-right: initial;
+  margin-left: initial;
+ }
 
 /* Main marketing message and sign up button */
 .jumbotron {
@@ -88,4 +91,8 @@ padding-left: 2px;
   background-color: white;
 border: 1px solid #999;;
 border-radius: 10px;
+}
+
+.deleteTestHeader{
+  display:none;
 }
