--- a/style/blog.css
+++ b/style/blog.css
@@ -5,6 +5,7 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
+  background-color: rgb(255, 255, 255);
 }
 
 h1, .h1,
@@ -36,7 +37,6 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #428bca;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -47,17 +47,19 @@ h6, .h6 {
   display: inline-block;
   padding: 10px;
   font-weight: 500;
-  color: #cdddeb;
+  color: #116AB6;
+  border-color: #357ebd;
+
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
-  color: #fff;
+  color: #6D90AE;
   text-decoration: none;
 }
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
-  color: #fff;
+  color: #116AB6;
 }
 .blog-nav .active:after {
   position: absolute;
@@ -78,19 +80,28 @@ h6, .h6 {
  * Blog name and description
  */
 
-.blog-header {
+.header {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-.blog-title {
-  margin-top: 30px;
+.title {
+  margin-top: 10px;
   margin-bottom: 0;
-  font-size: 60px;
-  font-weight: normal;
+  color: rgb(0, 0, 0);
+font-family: nyt-cheltenham, georgia, 'times new roman', times, serif;
+font-size: 60px;
+font-weight: bold;
+text-align: center;
+
 }
-.blog-description {
-  font-size: 20px;
+.description {
+
   color: #999;
+  color: rgb(51, 51, 51);
+  font-family: georgia, 'times new roman', times, serif;
+  font-size: 30px;
+  font-weight: normal;
+
 }
 
 
@@ -110,7 +121,7 @@ h6, .h6 {
 }
 .sidebar-module-inset {
   padding: 15px;
-  background-color: #f5f5f5;
+  background-color: rgb(255, 255, 255);
   border-radius: 4px;
 }
 .sidebar-module-inset p:last-child,
