--- a/style/tree.css
+++ b/style/tree.css
@@ -2,8 +2,8 @@
     min-height:20px;
     padding:2px;
     margin-bottom:0px;
-    background-color:#fbfbfb;
-    border:1px solid #999;
+    background-color: rgb(255, 255, 255);
+    border:1px solid rgb(255, 255, 255);
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
     border-radius:4px;
