--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -239,3 +239,22 @@ a.itooltip .testDesc{
   width: 100%;
 height: 150px;
 }
+.header{
+  margin: auto;
+  margin-left: 10%;
+  background-image: url('/rip.png');
+  background-repeat: no-repeat;
+  background-position-x: 50%;
+  background-position-y: 1px;
+  background-size: contain;
+  padding-top: 13px;
+  opacity: 0.4;
+  z-index: 1;
+  display: inline-block;
+}
+.header >span{
+  color: #1C86E5;
+font-size: 39px;
+opacity: 1.0;
+z-index: 1000000;
+}
